scripts/old/iptables/iptables_rules
# Generated by iptables-save v1.4.0 on Sun Mar  2 16:42:01 2008
*filter
# :INPUT ACCEPT [94772:136593289]
# :FORWARD ACCEPT [0:0]
# :OUTPUT ACCEPT [59726:3626051]
# :INPUT ACCEPT [0:0]
# :FORWARD ACCEPT [0:0]
# :OUTPUT ACCEPT [0:0]

-A INPUT -s 127.0.0.1 -j ACCEPT
# -A INPUT -i lo -j ACCEPT
# -A INPUT -s 127.0.0.1/32 -j ACCEPT

# accept all previously established connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# drop all invalid...
-A INPUT -m state --state INVALID -j DROP
# ...and something else
-A INPUT -p tcp ! --syn -m state --state NEW -j DROP
-A OUTPUT -p tcp ! --syn -m state --state NEW -j DROP
# -A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -p UDP -s 0/0 --destination-port 138 -j DROP 
-A INPUT -p UDP -s 0/0 --destination-port 113 -j REJECT 
# -A INPUT -p udp -m udp --dport 138 -j DROP
# -A INPUT -p udp -m udp --dport 113 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p UDP -s 0/0 --source-port 67 --destination-port 68 -j ACCEPT  
# -A INPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -p UDP -j RETURN 
-A OUTPUT -p UDP -s 0/0 -j ACCEPT
# -A OUTPUT -p udp -j ACCEPT

# drop fragmented packages
-A INPUT --fragment -p ICMP -j DROP 
-A OUTPUT --fragment -p ICMP -j DROP 

# X server
-A INPUT -p tcp -m tcp --dport 6000:6063 -j DROP --syn
# -A INPUT -p tcp -m tcp --dport 6000:6063 --tcp-flags FIN,SYN,RST,ACK SYN -j DROP

# ssh
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT

# ftp / webserver related
-A INPUT -p tcp -m state --state NEW -m tcp --dport 20 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT

# Windows / Samba
# -A INPUT -p tcp -m state --state NEW -m tcp --dport 137:139 -j ACCEPT
# -A INPUT -p tcp -m state --state NEW -m tcp --dport 426 -j ACCEPT
# -A INPUT -p tcp -m state --state NEW -m tcp --dport 445 -j ACCEPT

# up to 10 Bit-torrent connections
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6881:6990 -j ACCEPT

# Logging stealth scan
-A INPUT -p tcp --tcp-flags ACK,FIN FIN -j LOG --log-prefix "Stealth scan"
-A INPUT -p tcp --tcp-flags ACK,FIN FIN -j DROP
# -A INPUT -p tcp -m tcp --tcp-flags FIN,ACK FIN -j LOG --log-prefix "Stealth scan"
# -A INPUT -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP

# reject everything else
# Maybe logging unneeded? 
# -A INPUT -j LOG --log-prefix "Rejected other"
-A INPUT -j REJECT --reject-with icmp-port-unreachable

# No forwarding
-A FORWARD -j REJECT --reject-with icmp-port-unreachable

COMMIT

# -A INPUT -p icmp -f -j DROP
# -A OUTPUT -p icmp -f -j DROP
# -A INPUT -p tcp -m state --state NEW -m tcp --dport 3500:3600 -j ACCEPT
# -A OUTPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
